Bug 472427 - KPhotoAlbum does not ask to save on exit
Summary: KPhotoAlbum does not ask to save on exit
Status: RESOLVED FIXED
Alias: None
Product: kphotoalbum
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.10.0
Platform: Other Linux
: NOR major
Target Milestone: ---
Assignee: KPhotoAlbum Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-07-20 10:54 UTC by Johannes Zarl-Zierl
Modified: 2023-07-20 11:19 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Johannes Zarl-Zierl 2023-07-20 10:54:07 UTC
SUMMARY
Since version 5.10, KPhotoAlbum no longer asks the user if they want to save their database before exiting.

STEPS TO REPRODUCE
1. Open KPhotoAlbum
2. Change something (e.g. assign a token to an image) so that the floppy disk icon appears in the status bar, signifying a change in the database
3. Press Ctrl-Q or Alt-F4 to exit KPhotoAlbum

OBSERVED RESULT
KPhotoAlbum quits without asking the user whether they want to save their changes.

EXPECTED RESULT
KPhotoAlbum asks the user whether they want to save their changes before exiting.

ADDITIONAL INFORMATION
Comment 1 Johannes Zarl-Zierl 2023-07-20 11:19:16 UTC
Git commit 2e66ab27a7f8d63d9a77f4c7188fe6d4f4129b5d by Johannes Zarl-Zierl.
Committed on 20/07/2023 at 11:18.
Pushed by johanneszarl into branch 'master'.

Fix regression regarding missing autosave-feature

This issue was introduced by commit
b6ce9815637115c3e08b6c206a49c9cf7fb01c7e.

M  +1    -0    CHANGELOG.md
M  +32   -3    MainWindow/Window.cpp

https://invent.kde.org/graphics/kphotoalbum/-/commit/2e66ab27a7f8d63d9a77f4c7188fe6d4f4129b5d