Fix regression regarding missing autosave-feature

This issue was introduced by commit
b6ce9815637115c3e08b6c206a49c9cf7fb01c7e.

BUG: 472427